# traveler_backend

./: .gitignore  .pre-commit-config.yaml  LICENSE  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 11356a58f2a1_fix_relation_between_user_and_marker.py  a6437d861765_add_user_id_foreign_key_to_markers_table.py  b10ceeef6159_initial_commit.py
app/: config.py  constants.py  database.py  utils.py
app/models/: __init__.py  marker.py  user.py
app/repositories/: user.py
app/routers/: auth.py  user.py
app/schemas/: auth.py  base.py  user.py
app/services/: auth.py  user.py
